change doc for auth
